Rendering artifacts with volumetrics + object texture with alpha transparency #38710

Closed
opened 2014-02-18 21:59:26 +01:00 by Sakari Leppä · 8 comments

System Information
Windows 7 professional
Intel Core i7-2600
Geforce 560Ti

Blender Version
Broken: 2.69.10 cc7cfd6

Short description of error
When an object with textured alpha transparency is inside a volumetric object, its transparent areas show up in a weird way.

Also, some weird light streak appears inside the volume. The errors might to be related, because if I delete the objects inside the volume, the streak goes away.

Attached image for clarification.
cycles_alpha_bug.jpg

Exact steps for others to reproduce the error
Open my attached scene, and activate viewport rendering.
Or:
Add a cube. Set up a volumetric scattering material. (Absorption type doesn't have this error.)
Add a plane. Set up a material with clearly visible transparent areas. Place inside cube.
Add a light source.
Render.

cycles_volumetric_bug.blend

**System Information** Windows 7 professional Intel Core i7-2600 Geforce 560Ti **Blender Version** Broken: 2.69.10 cc7cfd6 **Short description of error** When an object with textured alpha transparency is inside a volumetric object, its transparent areas show up in a weird way. Also, some weird light streak appears inside the volume. The errors might to be related, because if I delete the objects inside the volume, the streak goes away. Attached image for clarification. ![cycles_alpha_bug.jpg](https://archive.blender.org/developer/F78000/cycles_alpha_bug.jpg) **Exact steps for others to reproduce the error** Open my attached scene, and activate viewport rendering. Or: Add a cube. Set up a volumetric scattering material. (Absorption type doesn't have this error.) Add a plane. Set up a material with clearly visible transparent areas. Place inside cube. Add a light source. Render. [cycles_volumetric_bug.blend](https://archive.blender.org/developer/F78003/cycles_volumetric_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SakariLeppa

Added subscriber: @SakariLeppa

Added subscribers: @brecht, @ThomasDinges

Added subscribers: @brecht, @ThomasDinges

Confirmed the problem.

@brecht: Does not happen with CMJ, problem only occurs with Sobol.

Confirmed the problem. @brecht: Does not happen with CMJ, problem only occurs with Sobol.
Brecht Van Lommel was assigned by Thomas Dinges 2014-02-19 00:56:34 +01:00

This issue was referenced by blender/blender-addons-contrib@e1e247a99b

This issue was referenced by blender/blender-addons-contrib@e1e247a99b480f81fb76332525002fbc7f776f12

This issue was referenced by e1e247a99b

This issue was referenced by e1e247a99b480f81fb76332525002fbc7f776f12

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e1e247a99b.

Closed by commit e1e247a99b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38710
No description provided.