Fix T38710: volume render issue with transparent surfaces.